--- a/contact_us.html
+++ b/contact_us.html
@@ -8,16 +8,27 @@
     <link rel="stylesheet" href="css/skeleton.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="css/custome.css" media="screen" title="no title" charset="utf-8">
   </head>
-  <body class="palaceholder">
+  <body>
     <nav class="navbar">
       <div class="container">
         <a href="index.html"><img src="images/logo.png" alt="Yel Group - netsec" class="logo"/></a>
-        <h1>Penetration testing &amp; security solutions</h1>
         <ul class="menu-list">
           <li><a class="menu-list-link" href="who_we_are.html">Who we are</a></li>
           <li><a class="menu-list-link" href="solution.html">Solutions</a></li>
           <li><a class="menu-list-link" href="contact_us.html">Contact us</a></li>
         </ul>
     </nav>
+    <div class="container" style="max-width: 500px;">
+      <form accept-charset="UTF-8" action="https://formkeep.com/f/5f2b0bb00372" method="POST">
+        <div class="row">
+          <input type="hidden" name="utf8" value="✓">
+          <input class="u-full-width" type="email" name="email" placeholder="Your Email">
+          <input class="u-full-width" type="email" name="name" placeholder="Your name">
+          <textarea class="u-full-width" required="true" rows="6" name="message" placeholder="How can we help?"></textarea>
+          <button class="u-full-width" type="submit">Submit</button>
+        </div>
+      </form>
+    </div>
+
   </body>
 </html>
