--- a/who_we_are.html
+++ b/who_we_are.html
@@ -8,16 +8,28 @@
     <link rel="stylesheet" href="css/skeleton.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="css/custome.css" media="screen" title="no title" charset="utf-8">
   </head>
-  <body class="palaceholder">
+  <body>
     <nav class="navbar">
       <div class="container">
         <a href="index.html"><img src="images/logo.png" alt="Yel Group - netsec" class="logo"/></a>
-        <h1>Penetration testing &amp; security solutions</h1>
         <ul class="menu-list">
           <li><a class="menu-list-link" href="who_we_are.html">Who we are</a></li>
           <li><a class="menu-list-link" href="solution.html">Solutions</a></li>
           <li><a class="menu-list-link" href="contact_us.html">Contact us</a></li>
         </ul>
     </nav>
+    <div class="container">
+      <div class="palaceholder">
+        <p>
+          We are group of information security specialists.
+          <br>
+          YelGroup helps you safeguard your business from security threats you can’t see.
+        </p>
+        <p>
+          <b>Mikhail Salnikov</b> (<a href="https://twitter.com/MihailSalnikov" target="_blank">@MihailSalnikov</a>) - Founder
+        </p>
+      </div>
+    </div>
+
   </body>
 </html>
