--- a/who_we_are.html
+++ b/who_we_are.html
@@ -23,7 +23,7 @@
         <p>
           We are group of information security specialists.
           <br>
-          YelGroup helps you safeguard your business from security threats you can’t see.
+          Yel Security helps you safeguard your business from security threats you can’t see.
         </p>
         <p>
           <b>Mikhail Salnikov</b> (<a href="https://twitter.com/MihailSalnikov" target="_blank">@MihailSalnikov</a>) - Founder
