--- a/contact_us.html
+++ b/contact_us.html
@@ -13,7 +13,7 @@
       <div class="container">
         <a href="index.html"><img src="images/logo.png" alt="Yel Group - netsec" class="logo"/></a>
         <ul class="menu-list">
-          <li><a class="menu-list-link" href="who_we_are.html">Who we are</a></li>
+          <li><a class="menu-list-link" href="index.html">Who we are</a></li>
           <li><a class="menu-list-link" href="solution.html">Solutions</a></li>
           <li><a class="menu-list-link" href="contact_us.html">Contact us</a></li>
         </ul>
